--- a/HOFCWindows/MainPage.xaml
+++ b/HOFCWindows/MainPage.xaml
@@ -25,7 +25,7 @@
             </StackPanel>
         </SplitView.Pane>
         <SplitView.Content>
-            
+            <Frame x:Name="MainFrame"></Frame>
         </SplitView.Content>
     </SplitView>
 </Page>
