--- a/HOFCWindows/Views/Calendrier.xaml
+++ b/HOFCWindows/Views/Calendrier.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <TextBlock Text="Calendrier"></TextBlock>
+    <Grid Background="LightYellow">
+        <TextBlock FontSize="36" Text="Calendrier" Margin="12,17,0,17"/>
     </Grid>
 </Page>
