--- a/HOFCWindows/Views/Accueil.xaml
+++ b/HOFCWindows/Views/Accueil.xaml
@@ -3,11 +3,27 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:HOFCWindows.Views"
+    xmlns:models="using:HOFCWindows.Models"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:c="using:HOFCWindows.Converters"
     mc:Ignorable="d">
-
+    <Page.Resources>
+        <c:UriConverter x:Key="UriConverter"/>
+        <c:StringConverter x:Key="StringConverter"/>
+    </Page.Resources>
     <Grid Background="SteelBlue">
-        <TextBlock FontSize="36" Text="Settings Page" Margin="12,17,0,17"/>
+        <ListView ItemsSource="{x:Bind Actus}">
+            <ListView.ItemTemplate>
+                <DataTemplate x:DataType="models:Actu">
+                    <StackPanel>
+                        <TextBox Text="{x:Bind Titre}"/>
+                        <Image Source="{x:Bind ImageURL, Converter={StaticResource UriConverter}}"/>
+                        <TextBox Text="{x:Bind Texte}"/>
+                        <TextBox Text="{x:Bind Date, Converter={StaticResource StringConverter}, ConverterParameter=\{0:d\}}"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </Grid>
 </Page>
