--- a/HOFCWindows/Views/Accueil.xaml
+++ b/HOFCWindows/Views/Accueil.xaml
@@ -12,18 +12,18 @@
         <c:UriConverter x:Key="UriConverter"/>
         <c:StringConverter x:Key="StringConverter"/>
     </Page.Resources>
-    <Grid Background="SteelBlue">
-        <ListView ItemsSource="{x:Bind Actus}">
-            <ListView.ItemTemplate>
+    <Grid>
+        <GridView ItemsSource="{x:Bind Actus}">
+            <GridView.ItemTemplate>
                 <DataTemplate x:DataType="models:Actu">
-                    <StackPanel>
-                        <TextBox Text="{x:Bind Titre}"/>
-                        <Image Stretch="None" Height="Auto" Width="Auto" Source="{x:Bind ImageURL, Converter={StaticResource UriConverter}}"/>
-                        <TextBox Text="{x:Bind Texte}"/>
-                        <TextBox Text="{x:Bind Date, Converter={StaticResource StringConverter}, ConverterParameter=\{0:d\}}"/>
+                    <StackPanel Width="Auto">
+                        <Image Stretch="None" Margin="0,10" Height="Auto" Width="Auto" Source="{x:Bind ImageURL, Converter={StaticResource UriConverter}}"/>
+                        <TextBlock Margin="10,10" FontWeight="Bold" Text="{x:Bind Titre}"/>
+                        <TextBlock Margin="10,10" Text="{x:Bind Texte}"/>
+                        <TextBlock Margin="0,10,10,10" HorizontalAlignment="Right" Text="{x:Bind Date, Converter={StaticResource StringConverter}, ConverterParameter=\{0:d\}}"/>
                     </StackPanel>
                 </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+            </GridView.ItemTemplate>
+        </GridView>
     </Grid>
 </Page>
